# EVcouplings

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  deploy_anaconda.sh  evcouplings_app  pyproject.toml  requirements.txt  setup.py  source_modules.sh
.github/workflows/: build_and_test.yml  build_test_and_push.yml  build_test_push.yml
config/: sample_config.txt  sample_config_complex.txt  sample_config_monomer.txt  sample_config_monomer_o2.txt  sample_config_o2.txt  sample_config_original.txt
docs/: Makefile  conf.py  evcouplings.rst  evcouplings.utils.rst  evcouplings.visualize.rst  index.rst  make.bat  modules.rst
evcouplings/: __init__.py
evcouplings/align/: .protocol.py.swp  .tools.py.swp  __init__.py  alignment.py  app.py  ena.py  ids.py  pfam.py  protocol.py  tools.py
evcouplings/compare/: __init__.py  asa.py  distances.py  ecs.py  enrichment.py  hmmer_wrappers.py  mapping.py  pdb.py  protocol.py  sifts.py  tools.py
infra/: README.md
notebooks/: alignment_analysis.ipynb  alignment_development_v1.ipynb  distance_calculations.ipynb  model_parameters_mutation_effects.ipynb  output_files_tutorial.ipynb  running_jobs.ipynb  running_jobs_complexes.ipynb  test_config.txt
test/: TestAlignment.py  TestAutomaticMemoryRequirements.py  TestComplex.py  TestCouplings.py  TestFold.py  TestMutation.py  TestSubmitter.py  TestUtilsApp.py  TestUtilsCalculate.py  TestUtilsConfig.py  TestUtilsDatabase.py  TestUtilsHelpers.py  TestUtilsMetadataTracker.py  TestUtilsSubmitter.py  TestUtilsSystem.py  TestUtilsUpdateDatabase.py  TestWeightsCalc.py
(+219 files in other folders)
