[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evcouplings"
version = "0.2.1"
description = "A Framework for evolutionary couplings analysis"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Thomas Hopf", email = "thomas.hopf@gmail.com" },
]
keywords = [
    "analysis",
    "couplings",
    "evolutionary",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "billiard",
    "biopython>=1.84",
    "bokeh",
    "click",
    "filelock",
    "jinja2",
    "matplotlib",
    "msgpack",
    "numba",
    "numpy",
    "pandas",
    "psutil",
    "requests",
    "ruamel.yaml<0.18",
    "scikit-learn",
    "scipy",
    "seaborn",
    "setuptools>=18.2",
]

[project.scripts]
evcouplings = "evcouplings.utils.app:app"
evcouplings_dbupdate = "evcouplings.utils.update_database:app"
evcouplings_runcfg = "evcouplings.utils.pipeline:app"
evcouplings_summarize = "evcouplings.utils.summarize:app"

[project.urls]
Homepage = "https://github.com/debbiemarkslab/EVcouplings"

[tool.hatch.version]
path = "evcouplings/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/evcouplings",
]
